package it.unibo.antsim.agent;

public enum AntRole {
    EXPLORER,
    FOLLOWER
}
